按照老师视频作品

--- a/index.html
+++ b/index.html
@@ -7,12 +7,6 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <header>
-      <hgroup>
-        <h1> @+ MM Stub </h1>
-        <h2> @+ Mobile Mashup Bookmarklet(ampp) </h2>
-      </hgroup>
-    </header>
     <div id="at-plus-container">
       <div id="bottom-positioner">
         <div id="button">
@@ -35,11 +29,10 @@
             </ul>
           </div>
           <div class="apb">
-            <!--<div class="icon"></div>-->
+            <div class="icon"></div>
           </div>
         </div>
       </div>
     </div>
   </body>
 </html>
-
